--- a/iOS8DynamicTypeDemo/Base.lproj/Main.storyboard
+++ b/iOS8DynamicTypeDemo/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="i8T-OJ-HSK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="i8T-OJ-HSK">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6205"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6206.8"/>
         <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="QuoteTableViewCell" rowHeight="89" id="qnI-dg-B5M" customClass="QuoteTableViewCell" customModule="iOS8DynamicTypeDemo" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="QuoteTableViewCell" rowHeight="89" id="qnI-dg-B5M" customClass="QuoteTableViewCell" customModule="iOS8DynamicTypeDemo">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qnI-dg-B5M" id="6SZ-rd-Fzn">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -43,8 +43,8 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="quoteContentLabel" destination="glb-GL-eh7" id="Q5e-OS-DIp"/>
-                                    <outlet property="scenarioLabel" destination="TK1-5H-I41" id="PKc-Iv-GxX"/>
+                                    <outlet property="quoteContentLabel" destination="glb-GL-eh7" id="PGO-BW-nQh"/>
+                                    <outlet property="scenarioLabel" destination="TK1-5H-I41" id="Ptq-5O-bmZ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
